<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de session</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">Aun no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="welcome_to_the_app">Bienvenido</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar cesion</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="label_type1">Consulta</string>
    <string name="label_type2">Examen</string>
    <string name="label_type3">Operacion</string>
    <string name="btn_next">Siguente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>


    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita medica %1$d</string>
    <string name="item_appointment_date">Atencion el dia %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas medicas</string>
    <string name="press_back_again">Precione una vez mas para salir</string>
    <string name="dialog_appointment_exit_title">Estas seguro que seseas salir?</string>
    <string name="dialog_appointment_exit_message">Si abandonas el registro, los datos que has ingresado se perderan.</string>
    <string name="dialog_appointment_exit_positive_btn">Si, Salir</string>
    <string name="dialog_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="label_scheduled_time">Hora para la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loaded_specialties">Ocurrio un problema al cargar las especialidades</string>
    <string name="error_loaded_doctors">Ocurrio un problema al cargar los doctores</string>
    <string name="error_loaded_hours">Ocurrio un problema al cargar los horarios</string>
    <string name="toast_not_hours_available">No hay horas disponibles para ese medico, en esa fecha.</string>
    <string name="label_select_doctor_and_date">Seleccione un medico y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">No se pudieron cargar horas disponibles, para el medico en el dia seleccionado</string>
    <string name="error_login_response">Se obtuvo una respuesta inerperada del servidor.</string>
    <string name="error_login_credentials">Error credenciales incorrectas</string>
    <string name="error_credentials_login">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y una contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
</resources>
